tests/lit/assembler/mod/bad_fn_or_var.ya
// RUN: @yair_as @file --color never

mod "😀" {
  // CHECK: error: Unknown declaration within module
  // CHECK: ^ expected fn, var, or '}' to close the module
  bad
}
